--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,10 @@
-Flask==1.1.2
-py-cpuinfo==7.0.0
-psutil==5.8.0
-gunicorn==20.1.0
-black==20.8b1
-flake8==3.9.0
-pytest==6.2.2
+Flask==2.3.2
+Werkzeug<3.0.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+py-cpuinfo==9.0.0
+psutil==6.0.0
+gunicorn==23.0.0
+black==24.4.2
+flake8==7.1.1
+pytest==8.3.3
